--- a/src/assets/stylesheets/setup.css
+++ b/src/assets/stylesheets/setup.css
@@ -7,42 +7,84 @@
     margin-top: 90px;
 }
 
-.powerupsCont {
+
+.goodEvilCont {
     display: flex;
     flex-direction: row;
 }
-.nonePowerups {
+.goodEvilOption, .goodEvilOptionSelected {
+    border: solid 2px #1d1d2c;
+    border-radius: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 3rem;
+    margin: auto;
+    padding: 10px;
+    width: 20%;
+}
+.goodEvilOptionSelected {
+    background-color: #EBA63F;
+}
+.goodEvilOption:hover {
+    background-color: #EBA63F;
+}
+
+
+.goodIcon {
+    color: #438945;
+    font-weight: bolder;
+    margin-bottom: 10px;
+    width: 50%;
+}
+
+.evilIcon {
+    color: #E40C2B;
+    margin-bottom: 10px;
+    width: 50%;
+}
+.tickIcon {
+    color: #438945;
+    width: 50%;
+}
+.crossIcon {
+    color: #E40C2B;
+    width: 50%;
+}
+
+.noneGoodEvil {
     margin: auto;
     font-size: 3rem;
 }
-.nonePowerups:hover {
+.noneGoodEvil:hover {
     color: #e40c2b;
 }
-.nonePowerupsSelected {
+.noneGoodEvilSelected {
     margin: auto;
     font-size: 4rem;
     color: #e40c2b;
 }
-.somePowerups {
+
+.someGoodEvil {
     margin: auto;
     font-size: 3rem;
 }
-.somePowerups:hover {
+.someGoodEvil:hover {
     color: #3CBCC3;
 }
-.somePowerupsSelected {
+.someGoodEvilSelected {
     margin: auto;
     font-size: 4rem;
     color: #3CBCC3;
 }
-.allPowerups {
+
+.allGoodEvil {
     margin: auto;
     font-size: 3rem;
 }
-.allPowerups:hover {
+.allGoodEvil:hover {
     color: #438945;
 }
-.allPowerupsSelected {
+.allGoodEvilSelected {
     margin: auto;
     font-size: 4rem;
     color: #438945;
@@ -50,10 +92,11 @@
 
 .sectionName {
     color: #1d1d2c;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-family: 'Sigmar', cursive;
     font-weight: 100;
-    margin-bottom: 1px;
+    margin-bottom: 10px;
+    margin-top: 5px;
 }
 
 .sectionRow {
@@ -61,7 +104,6 @@
     flex-direction: column;
     font-size: 1.5rem;
     font-family: 'Sigmar', cursive;
-    margin: auto;
     margin-bottom: 30px;
     text-align: center;
 }
@@ -70,7 +112,7 @@
     background-color: #EBA63F;
     border-radius: 2rem;
     box-shadow: 5px 5px #1d1d2c;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-family: 'Sigmar', cursive;
     margin: auto;
     padding: 15px;
@@ -86,20 +128,21 @@
     margin-right: 10px;
 }
 
-.teamCont {
-    flex-wrap: wrap;
+.teamContainer {
+    height: 220px;
+    margin-bottom: 0%;
 }
 
 .teamIcon {
     font-size: 2rem;
 }
 
-.teamOption {
+.teamOption, .teamOptionSelected {
     border: solid 2px #1d1d2c;
     font-size: 1.5rem;
     margin: auto;
     padding: 6px;
-    width: 35%;
+    width: 40%;
     text-align: center;
 }
 .teamOption:hover {
@@ -107,10 +150,4 @@
 }
 .teamOptionSelected {
     background-color: #EBA63F;
-    border: solid 2px #1d1d2c;
-    font-size: 1.5rem;
-    margin: auto;
-    padding: 6px;
-    width: 35%;
-    text-align: center;
 }
